--- a/components/TableOfContents/TableOfContents.module.scss
+++ b/components/TableOfContents/TableOfContents.module.scss
@@ -14,6 +14,7 @@
 
     .heading {
         font-size: var(--typography-size-200);
+        margin-block: 0;
     }
 }
 
